📝 docs(文檔): 完整重構 README 和 Usage 並新增 CLAUDE.md
  ✨ 新增功能
    - 📄 新增 CLAUDE.md 開發指引檔案，提供 Claude Code 完整的專案架構說明
    - 🎯 新增詳盡的開發命令、架構說明和撰寫規範

  📚 README.md 大幅改進
    - 🌟 豐富專案介紹，增加主題特色說明
    - 🚀 完整的安裝指南，包含環境需求和快速開始
    - 🖼️ 詳細版面配置說明表格和使用範例
    - 🛠️ 改進開發貢獻指南，包含完整的開發流程
    - 📚 新增相關連結、授權條款和聯絡方式

  📖 Usage.md 完全重寫
    - 🎯 新增完整的快速導覽和教學結構
    - 🔧 詳細的主題設定選項和預設值說明
    - 🖼️ 修正版面配置說明，基於實際程式碼行為
      - ⚠️ 修正 cover layout 限制說明（只顯示 h1 和 h2）
      - ⚠️ 修正 section layout 隱藏規則說明
      - ⚠️ 修正 default layout 的 h1 特殊處理
      - ⚠️ 修正 image layout 為 Markdown 圖片而非背景圖片
    - 💻 擴充程式碼高亮和樣式自訂說明
    - ⚡ 新增進階功能和完整實務案例
    - ❓ 新增常見問題疑難排解

  🔧 主題配置調整
    - 📑 新增 base.vue 頁碼功能和跳過頁碼的版面設定
    - 🎨 修正 package.json 中的預設配置
    - 💎 完善 layout.css 樣式定義
    - 📝 更新 example.md 範例檔案

  🎨 文檔品質提升
    - 🇹🇼 全文使用台灣慣用繁體中文撰寫
    - ✨ 大量使用 emoji 增加視覺豐富度
    - 📋 提供實用的程式碼範例和最佳實踐
    - 🔍 確保所有說明基於實際程式碼實作

--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
         "sans": "Noto Sans TC",
         "mono": "Fira Code"
       },
-      "layout": "cover",
+      "layout": "default",
       "aspectRadio": "16/9",
       "mdc": true,
-      "title-template": "%s - AiSP"
+      "titleTemplate": "%s - FHSH AiSP"
     }
   }
 }
