✨ feat(theme): 新增互動測驗功能並建立完整文件系統
  - 🎮 新增 quiz 版面配置，支援多選題測驗功能
  - 🧩 建立 MultiChoice 元件，提供視覺化回饋系統
  - 🔧 新增 useQuiz.js 和 useWsService.js 共用工具函式
  - 📚 完整重寫 README.md，新增測驗功能介紹
  - 📖 大幅擴充 Usage.md，增加詳細使用指南和實務範例
  - 📋 建立 CHANGELOG.md，完整記錄專案版本演進
  - 🔄 更新版本至 1.2.0，反映重要功能新增
  - 🚧 標示線上 WebSocket 模式為開發中功能
  - 🎯 修正文件中的用語，避免使用中國大陸用語
  - ⚠️ 確保使用者了解目前僅支援離線模式測驗

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cxphoenix/slidev-theme-fhsh-aisp",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "type": "module",
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@slidev/types": "^52.1.0",
+    "@vueuse/core": "^13.6.0",
     "prettier": "^3.5.3"
   },
   "devDependencies": {
@@ -42,7 +43,8 @@
       "layout": "default",
       "aspectRadio": "16/9",
       "mdc": true,
-      "titleTemplate": "%s - FHSH AiSP"
+      "titleTemplate": "%s - FHSH AiSP",
+      "favicon": "https://security-program.fhsh.taipei/New AiSP LOGO.png"
     }
   }
 }
